write my personal Goal

--- a/_posts/2025-05-28-example.md
+++ b/_posts/2025-05-28-example.md
@@ -1,6 +1,14 @@
 ---
-title: first page
+title: Goal
 date: 2025-05-28 00:20:00 +0900
 categories: [Blog]
-tags: [test]
+tags: [Goal]
 ---
+
+# 1. Kaggle Master
+  - 1달에 2회 노트북 작성
+
+# 2. ML/AI Experter
+
+# 실천 목표
+ - 하루에 30분 강의 듣기
