reinforcement study load-map

--- a/_posts/2025-05-28-example.md
+++ b/_posts/2025-05-28-example.md
@@ -9,6 +9,13 @@ tags: [Goal]
   - 1달에 2회 노트북 작성
 
 # 2. ML/AI Experter
+ - 
 
-# 실천 목표
- - 하루에 30분 강의 듣기
+# 3. 학습 로드맵
+## 3.1 캐글 마스터
+ - 파이썬 기초 학습
+ - 데이터 분석(판다스, 넘파이, 시각화) 실습
+ - 캐글 튜토리얼
+ - 다른 사람의 노트북 분석 및 피드백
+ - 자신만의 노트북 작성 및 공유
+ - 매달 획득 전략 연구 및 실행
